--- a/dev-house-coffee/service.html
+++ b/dev-house-coffee/service.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>KOPPEE - Coffee Shop HTML Template</title>
+    <title>DEV HOUSE COFFEE</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logo-dv-white.png" rel="icon">
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+    
     <!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3 m-0">
@@ -40,7 +41,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto p-4">
-                    <a href="index.html" class="nav-item nav-link active">Trang chính</a>
+                    <a href="index.html" class="nav-item nav-link">Trang chính</a>
                     <a href="about.html" class="nav-item nav-link">Về chúng tôi</a>
                     <a href="service.html" class="nav-item nav-link">Dịch vụ</a>
                     <a href="menu.html" class="nav-item nav-link">Menu</a>
@@ -64,7 +65,7 @@
         <div class="d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5" style="min-height: 400px">
             <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Dịch vụ</h1>
             <div class="d-inline-flex mb-lg-5">
-                <p class="m-0 text-white"><a class="text-white" href="">Trang ch</a></p>
+                <p class="m-0 text-white"><a class="text-white" href="">Trang chính</a></p>
                 <p class="m-0 text-white px-2">/</p>
                 <p class="m-0 text-white">Dịch vụ</p>
             </div>
@@ -154,10 +155,15 @@
                 <p>Mạng xã hội</p>
                 <div class="d-flex justify-content-start">
                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i
-                            class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2"
+                        href="https://www.facebook.com/profile.php?id=61553154133180"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2"
+                        href="https://www.tiktok.com/@userr8bn1somi5?lang=vi-VN&fbclid=IwAR3T-dGP4E6Tr9YTAZ_UPHx8Iy_HTJ5CSOFCDFwPBcG_XUqFlDw6ZOcAUow"><svg
+                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok"
+                            viewBox="0 0 16 16">
+                            <path
+                                d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3V0Z" />
+                        </svg></a>
                     <a class="btn btn-lg btn-outline-light btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
